out of screen fix

--- a/extension.less
+++ b/extension.less
@@ -30,6 +30,13 @@
 		border-bottom: 7px solid transparent;
 	}
 	
+	&.lefted .arrow {
+		left: auto;
+		right: -7px;
+		border-right: 0;
+		border-left: 7px solid #423748;
+	}
+	
 	.color-list {
 		padding: 0 10px 0 10px;
 		color: #202020;
